// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.eventcounter;
option go_package = "github.com/bucketeer-io/bucketeer/proto/eventcounter";

import "proto/event/client/event.proto";

message MAUSummary {
  string yearmonth = 1;
  string environment_id = 2;
  bucketeer.event.client.SourceId source_id = 3;
  int64 user_count = 4;
  int64 request_count = 5;
  int64 evaluation_count = 6;
  int64 goal_count = 7;
  bool is_all = 8;
  bool is_finished = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
}